[Images] - Started working on adding 'image search' demo functioanlity to the app.
SearchImagesModule - hexagon - logic
SearchImagesViewModel - Driver adapter
FlickrSearch - Driven port

Unit tests added for FlickrSearch.

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':hexagon', ':driven', ':driver', ':commons', ':commons-android'
+include ':app', ':hexagon', ':driven', ':driver', ':commons', ':commons-android', ':network'
