--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':hexagon', ':driven', ':driver', ':commons', ':commons-android', ':network'
+include ':app', ':hexagon', ':driven', ':driver', ':commons', ':commons-android', ':network', ':image-loader'
