--- a/network/build.gradle
+++ b/network/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'java-library'
 apply plugin: 'kotlin'
+apply plugin: 'kotlin-kapt'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -8,6 +9,9 @@ dependencies {
 
     // Moshi for json serialization
     implementation 'com.squareup.moshi:moshi-kotlin:1.8.0'
+
+    implementation 'com.google.dagger:dagger:2.13'
+    kapt 'com.google.dagger:dagger-compiler:2.13'
 }
 
 sourceCompatibility = "7"
