--- a/commons-android/build.gradle
+++ b/commons-android/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'javax.inject:javax.inject:1'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
